<resources>
    <string name="app_name">Naive Search</string>
    <string name="title_activity_result">result</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">Naive Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_language">Chinese</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_reset">Reset</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="TOTAL_BLOCKED_AD">Total blocked ad :</string>
    <string name="TOTAL_SEARCH_TIME_STRING">Total search time :</string>
    <string name="Day_Time">Day time</string>
    <string name="Theme_enabled">Theme enabled</string>
    <string name="Night_Time">Night time</string>
</resources>