<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ch"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/reset"
            android:title="@string/menu_reset" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/night"
            android:title="@string/menu_theme" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>